# patch_maker

./: CMakeLists.txt  CMakePresets.json  README.md  test0013.tif
.cache/clangd/index/: array.h.3806800D439BA477.idx  array.h.573AC6D0DB79C7FB.idx  image_viewer.cpp.4BADF232CE6995B6.idx  image_viewer.h.161DD051AFB49064.idx  main.cpp.F55409EDFF978748.idx  main_window.cpp.EF0C8DDA268A76A3.idx  main_window.h.08EB057815D92C52.idx  tests.cpp.6747CF3A0A31D6B0.idx  tiffio.h.2771169001CFE01B.idx
src/: image_viewer.cpp  image_viewer.h  main.cpp  main_window.cpp  main_window.h
src/io/: array.h  loader.h
src/io/hdf5/: h5dtype.h  reader.h  writer.h
src/io/tiff/: tiffio.h
tests/: CMakeLists.txt  tests.cpp
